# Obsidion

./: .all-contributorsrc  .env.example  .flake8  BOTLIST.md  Dockerfile  README.md  docker-compose.yaml  migration.py  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  start.sh  test.py
.github/: CODEOWNERS
.github/workflows/: constraints.txt  crowdin.yml  release.yml  tests.yml
cogs/info/: Information.py
discord_slash/: __init__.py  client.py  cog_ext.py  context.py  error.py  http.py  model.py
discord_slash/utils/: manage_commands.py
migrations/: env.py
migrations/versions/: 851d11b8a33e_create_guild_table.py
obsidion/: __init__.py  __main__.py
obsidion/cogs/botlist/: botlist.py
obsidion/cogs/config/: __init__.py  config.py
obsidion/cogs/facts/: facts.py
obsidion/cogs/fun/: fun.py
obsidion/cogs/hypixel/: hypixel.py
obsidion/cogs/images/: images.py
obsidion/cogs/info/: info.py
obsidion/cogs/locales/: af-ZA.po  ar-SA.po  ca-ES.po  cs-CZ.po  da-DK.po  de-DE.po  el-GR.po  en-US.po  es-ES.po  fi-FI.po  fr-FR.po  he-IL.po  hu-HU.po  it-IT.po  ja-JP.po  ko-KR.po  nl-NL.po  no-NO.po  pl-PL.po  pt-BR.po  pt-PT.po  ro-RO.po  ru-RU.po  sr-SP.po  sv-SE.po  tr-TR.po  uk-UA.po  vi-VN.po  zh-CN.po  zh-TW.po
obsidion/cogs/minecraft/: minecraft.py
obsidion/cogs/news/: news.py
obsidion/cogs/rcon/: __init__.py  rcon.py
obsidion/cogs/servers/: servers.py
obsidion/core/: bot.py  config.py  core_commands.py  dev_commands.py  events.py  global_checks.py  help.py  i18n.py  settings_cache.py
obsidion/core/locales/: af-ZA.po  ar-SA.po  ca-ES.po  (+27 more)
(+268 files in other folders)
