[tool.poetry]
authors = ["Darkflame72 <leon@bowie-co.nz>"]
description = "A Minecraft discord bot"
license = "AGPL-3.0-or-later"
name = "obsidion"
version = "1.0.0"

[tool.poetry.dependencies]
Babel = "^2.9.0"
aiodns = "^2.0.0"
aiohttp = "^3.6.1"
aiohypixel = "^0.2.1"
aioredis = "^1.3.1"
alembic = "^1.4.3"
asyncpg = "^0.22.0"
asyncrcon = "^1.1.4"
"discord.py" = "^1.6.0"
feedparser = "^6.0.1"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
lxml = "^4.5.2"
mcsrvstats = "^0.1.1"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
python = "^3.8"
uvloop = "^0.15.2"
SQLAlchemy = "1.4.7"
psycopg2-binary = "^2.8.6"
beautifulsoup4 = "^4.9.3"
dpymenus = "^1.3.1"
asyncpixel = "^1.0.8"
discord-py-slash-command = "^1.1.2"

[tool.poetry.dev-dependencies]
Pygments = "^2.7.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.812"
nox = "^2020.8.22"
nox-poetry = "^0.8.4"
pre-commit = "^2.12.0"
pre-commit-hooks = "^3.3.0"
reorder-python-imports = "^2.3.6"
safety = "^1.9.0"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.11.1"
flake8-builtins = "^1.5.3"
flake8-bandit = "^2.1.2"
flake8-eradicate = "^1.0.0"
flake8-comprehensions = "^3.3.1"
flake8-import-order = "^0.18.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.1"]
